🚤🎳 Checkpoint ./views/home.html:44341290/10

--- a/views/home.html
+++ b/views/home.html
@@ -208,7 +208,7 @@
     async function deleteTutor(){
       //opzioni per la fetch
       const options = {
-        method: 'POST',
+        method: 'DELETE',
         headers: {
         'Content-Type': 'application/json',
         },
