--- a/views/home.html
+++ b/views/home.html
@@ -57,7 +57,7 @@
 
     <div>
       <label for= "search"> Cerca Tutor</label><br>
-      <input type = "search" id = " search" data-search>
+      <input type="idDelete" id="idDelete" name="idDelete" >
       <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
     </div>
     <hr>
@@ -206,20 +206,21 @@
 
     <! FUNZIONE PER ELIMINARE UN TUTOR >
     async function deleteTutor(){
+      const idTutor = document.getElementById("idDelete").value;
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
         headers: {
         'Content-Type': 'application/json',
         },
-        body: JSON.stringify(newTutor),
+        body: JSON.stringify(idTutor),
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
       .then((response) => {
         if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
-          return response.json();
+          alert("Il tutor è stato eliminato!");
+          return response.();
         }
         alert('ERROR!Something went wrong!');
       })
