🦃🎂 Checkpoint ./views/home.html:44341290/207

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <script scr = "app/server.js"></script>
   </head>
 
   <body>
@@ -85,7 +87,6 @@
   
   
   <script>
-    
     <! FUNZIONE PER CERCARE UN TUTOR >
     async function researchTutors(){
       const researchValue = document.getElementById("researchValue").value;
