--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <script scr = "app/server.js"></script>
   </head>
 
   <body>
@@ -59,7 +57,7 @@
 
     <div>
       <label for= "search"> Cerca Tutor</label><br>
-      <input type="idDelete" id="idDelete" name="idDelete" >
+      <input type = "search" id = " search" data-search>
       <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
     </div>
     <hr>
@@ -87,6 +85,13 @@
   
   
   <script>
+    let filtroEsame = false;
+    let filtroEmail = false;
+    let filtroNome  = false;
+    let filtroCognome = false;
+    let filtroUni   = false;
+    let filtroCorso = false;
+
     <! FUNZIONE PER CERCARE UN TUTOR >
     async function researchTutors(){
       const researchValue = document.getElementById("researchValue").value;
@@ -119,7 +124,48 @@
       //pulisce la form
       document.getElementById("addTutor").reset();
     }
+    <! FUNZIONE PER CREARE UNA TABELLA DI TUTOR >
+    function buildTable(data){
+      var table = getElementById(tabella);
+      
+     //loop per stampare la righe della tabella
+      for(var i = 0; i < data.length; i++){
+        var row = <tr>
+            
+      }
+    }
     
+    <! FUNZIONI PER SELEZIONARE I FILTRI DI RICERCA >
+    function setFiltroNome(){
+      let set = !filtroNome;
+      
+      return set;
+    }
+    
+    function setFiltroCognome(){
+      let set = !filtroCognome;
+      return set;
+    }
+    
+    function setFiltroEmail(){
+      let set = !filtroEmail;
+      return set;
+    }
+    
+    function setFiltroUniversita(){
+      let set = !filtroUniversita;
+      return set;
+    }
+    
+    function setFiltroCorso(){
+      let set = !filtroCorso;
+      return set;
+    }
+    
+    function setFiltroEsame(){
+      let set = !filtroEsame;
+      return set;
+    }
   
     <! FUNZIONE PER AGGIUNGERE UN NUOVO TUTOR >
     async function addTutor(){
@@ -160,20 +206,19 @@
 
     <! FUNZIONE PER ELIMINARE UN TUTOR >
     async function deleteTutor(){
-      const idTutor = document.getElementById("idDelete").value;
       //opzioni per la fetch
       const options = {
-        method: 'DELETE',
+        method: 'POST',
         headers: {
         'Content-Type': 'application/json',
         },
-        body: JSON.stringify(idTutor),
+        body: JSON.stringify(newTutor),
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
       .then((response) => {
         if (response.ok) {
-          alert("Il tutor è stato eliminato!");
+          alert("Nuovo tutor aggiunto!");
           return response.json();
         }
         alert('ERROR!Something went wrong!');
