--- a/views/home.html
+++ b/views/home.html
@@ -60,8 +60,8 @@
     </div>
 
     <div>
-      <label for= "search"> Cerca Tutor</label><br>
-      <input type = "search" id = " search" data-search>
+      <label for= "search"> Inserisci ID Tutor da Eliminare</label><br>
+      <input type="number" id="idTutor" name="idTutor" >
       <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
     </div>
     <hr>
@@ -96,7 +96,7 @@
     let filtroUni   = false;
     let filtroCorso = false;
 
-    <! FUNZIONE PER CERCARE UN TUTOR >
+    //FUNZIONE PER RICERCARE UN TUTOR
     async function researchTutors(){
       const researchValue = document.getElementById("researchValue").value;
       
@@ -128,18 +128,8 @@
       //pulisce la form
       document.getElementById("addTutor").reset();
     }
-    <! FUNZIONE PER CREARE UNA TABELLA DI TUTOR >
-    function buildTable(data){
-      var table = getElementById(tabella);
-      
-     //loop per stampare la righe della tabella
-      for(var i = 0; i < data.length; i++){
-        var row = <tr>
-            
-      }
-    }
     
-    <! FUNZIONI PER SELEZIONARE I FILTRI DI RICERCA >
+    //FUNZIONE PER MODIFICARE UN TUTOR
     function setFiltroNome(){
       let set = !filtroNome;
       
@@ -171,7 +161,7 @@
       return set;
     }
   
-    <! FUNZIONE PER AGGIUNGERE UN NUOVO TUTOR >
+    //FUNZIONE PER AGGIUNGERE UN TUTOR
     async function addTutor(){
       
       //definisco i dati del nuovo tutor aggiungendo alcuni campi di default
@@ -208,21 +198,22 @@
       document.getElementById("addTutor").reset();
     }
 
-    <! FUNZIONE PER ELIMINARE UN TUTOR >
+    // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(){
+      const idTutor = document.getElementById("idTutor").value
       //opzioni per la fetch
       const options = {
-        method: 'POST',
+        method: 'DELETE',
         headers: {
         'Content-Type': 'application/json',
         },
-        body: JSON.stringify(newTutor),
+        body: JSON.stringify(idTutor),
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
       .then((response) => {
         if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
+          alert("Tutor eliminato!");
           return response.json();
         }
         alert('ERROR!Something went wrong!');
@@ -232,7 +223,7 @@
       });
     }
   
-    <! FUNZIONE PER MODIFICARE UN TUTOR >
+    //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
       
     }
