💄🗾 Checkpoint ./views/home.html:44341290/108 ./server.js:44341290/3

--- a/views/home.html
+++ b/views/home.html
@@ -200,14 +200,11 @@
 
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(){
-      const idTutor = document.getElementById("idTutor").value
+      const idTutor = document.getElementById("idTutor").value;
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
-        headers: {
-        'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(idTutor),
+        body: idTutor
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
