Rewound to commit 468fc7796897da2e2d6f0e0c299e7431e82900ea + 0 edits

--- a/views/home.html
+++ b/views/home.html
@@ -200,11 +200,14 @@
 
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(){
-      const idTutor = document.getElementById("idTutor").value;
+      const idTutor = document.getElementById("idTutor").value
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
-        body: idTutor
+        headers: {
+        'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(idTutor),
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
