--- a/views/home.html
+++ b/views/home.html
@@ -176,11 +176,8 @@
       })
       //opzioni per la fetch
       const options = {
-        method: 'POST',
-        headers: {
-        'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(newTutor),
+        method: 'POST'
+        body: JSON.stringify(newTutor)
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
