--- a/views/home.html
+++ b/views/home.html
@@ -204,10 +204,8 @@
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
-        headers: {
-        'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(idTutor),
+        //da error 500 perchè passa body vuoto
+        body: JSON.stringify(idTutor)
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
