--- a/views/home.html
+++ b/views/home.html
@@ -201,6 +201,7 @@
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(){
       const idTutor = document.getElementById("idTutor").value
+      console.log(idTutor);
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
