🎡🎭 Checkpoint ./views/home.html:44341290/122

--- a/views/home.html
+++ b/views/home.html
@@ -205,8 +205,10 @@
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
-        //da error 500 perchè passa body vuoto
-        body:idTutor;
+        headers: {
+        'Content-Type': 'application/json',
+        },
+        body:idTutor
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
