👧🎃 Checkpoint ./views/home.html:44341290/30 ./server.js:44341290/3

--- a/views/home.html
+++ b/views/home.html
@@ -180,7 +180,7 @@
         headers: {
         'Content-Type': 'application/json',
         },
-        body: JSON.stringify(newTutor),
+        body: JSON.stringify(newTutor)
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
@@ -206,9 +206,9 @@
       const options = {
         method: 'DELETE',
         headers: {
-        'Content-Type': 'application/json',
+        'Content-Type': 'application/json'
         },
-        body:idTutor
+        body:JSON.stringify(idTutor)
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
