😜👨‍❤️‍👨 Checkpoint ./views/home.html:44341290/201

--- a/views/home.html
+++ b/views/home.html
@@ -201,14 +201,15 @@
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(){
       const idTutor = document.getElementById("idTutor").value
-      console.log(JSON.stringify(idTutor));
+      console.log(idTutor.typeof);
+      console.log(JSON.parse(idTutor));
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
         headers: {
         'Content-Type': 'application/json'
         },
-        body:JSON.stringify(idTutor)
+        body:JSON.parse(idTutor)
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
