😎👱 Checkpoint ./views/home.html:44341290/81 ./server.js:44341290/12

--- a/views/home.html
+++ b/views/home.html
@@ -202,13 +202,14 @@
     async function deleteTutor(){
       const idTutor = document.getElementById("idTutor").value
       console.log(JSON.stringify(idTutor));
+      console.log(idTutor.typeof);
       //opzioni per la fetch
       const options = {
         method: 'DELETE',
         headers: {
         'Content-Type': 'application/json',
         },
-        body:idTutor
+        body:JSON.stringify(idTutor)
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
