🏁🚎 Checkpoint ./views/home.html:44341290/16

--- a/views/home.html
+++ b/views/home.html
@@ -209,7 +209,7 @@
         headers: {
         'Content-Type': 'application/json',
         },
-        body:JSON.stringify(idTutor)
+        body:idTutor
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
