⛳️🕍 Checkpoint ./views/home.html:44341290/22

--- a/views/home.html
+++ b/views/home.html
@@ -212,7 +212,7 @@
         body:idTutor
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/idTutor', options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
