🎉🐪 Checkpoint ./server.js:44341290/47 ./views/home.html:44341290/96

--- a/views/home.html
+++ b/views/home.html
@@ -205,11 +205,7 @@
       console.log(idTutor.typeof);
       //opzioni per la fetch
       const options = {
-        method: 'DELETE',
-        headers: {
-        'Content-Type': 'application/json',
-        },
-        body:idTutor
+        method: 'DELETE'
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/idTutor', options)
