--- a/views/home.html
+++ b/views/home.html
@@ -208,7 +208,7 @@
         method: 'DELETE'
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/idTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/idTutor', options,idTutor)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
