🍧🎥 Checkpoint ./views/home.html:44341290/12

--- a/views/home.html
+++ b/views/home.html
@@ -206,7 +206,7 @@
         method: 'DELETE'
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/$idTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/$(idTutor)', options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
