🏘🏩 Checkpoint ./views/home.html:44341290/153

--- a/views/home.html
+++ b/views/home.html
@@ -207,7 +207,9 @@
         headers: {
         'Content-Type': 'application/json',
         },
-        body: JSON.stringify(idTutor)
+        body:{
+          'id': JSON.stringify(idTutor)
+        }
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
