🛤💒 Checkpoint ./views/home.html:44341290/67

--- a/views/home.html
+++ b/views/home.html
@@ -208,7 +208,7 @@
         'Content-Type': 'application/json',
         },
         body:{
-          'id': JSON.stringify(idTutor)
+          id: document.getElementById("idTutor").value
         }
       };
       //eseguo la fetch
