--- a/views/home.html
+++ b/views/home.html
@@ -203,16 +203,10 @@
       const idTutor = document.getElementById("idTutor").value
       //opzioni per la fetch
       const options = {
-        method: 'DELETE',
-        headers: {
-        'Content-Type': 'application/json',
-        },
-        body:{
-          id: document.getElementById("idTutor").value
-        }
+        method: 'DELETE'
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor'+ idTutor, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
