--- a/views/home.html
+++ b/views/home.html
@@ -61,8 +61,8 @@
 
     <div>
       <form action="" id="deleteTutor">
-        <label for= "search"> Inserisci ID Tutor da Eliminare</label><br>
-        <input type="number" id="idTutor" name="idTutor" >
+        <label for= "search"> ID Tutor</label><br>
+        <input type="number" id="idTutor" name="idTutor" placeholder = "Inserisci ID tutor" >
         <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
       </form>
     </div>
@@ -73,7 +73,7 @@
       Aggiornamento dati Tutor
     </h2>
     <div>
-      <label for="id">ID</label><br>
+      <label for="id">ID Tutor</label><br>
       <input type="number" id="id" name="id" placeholder = "Inserisci ID tutor" >
     </div><br>
     <div>
@@ -225,7 +225,25 @@
   
     //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
-      
+      const id = document.getElementById("id").value
+      //opzioni per la fetch
+      const options = {
+        method: 'DELETE'
+      };
+      //eseguo la fetch
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/updateTutor/'+ id, options)
+      .then((response) => {
+        if (response.ok) {
+          alert("Tutor eliminato!");
+          return response.json();
+        }
+        alert('ERROR '+ response.status +'! Something went wrong!');
+      })
+      .catch(e => {
+          console.log(e);
+      });
+      //pulisce la form
+      document.getElementById("deleteTutor").reset();
     }
     
   </script>
