Rewound to commit 2d4b3795d75487f93237a56a45835d2f37e9bab0 + 0 edits

--- a/views/home.html
+++ b/views/home.html
@@ -223,7 +223,16 @@
     //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
       const id = document.getElementById("id").value;
-      C
+      if(filtroEsame = true){
+        const newExam  = document.getElementById("changeValue").value;
+        const newEmail = null;
+        const action   = "newExam";
+      }
+      if(filtroEmail = true){
+        const newEmail = document.getElementById("changeValue").value;
+        const newExam  = null;
+        const action   = "newEmail";
+      }
        
       //opzioni per la fetch
       const options = {
@@ -241,7 +250,6 @@
       .catch(e => {
           console.log(e);
       });
-      
       //pulisce la form
       document.getElementById("deleteTutor").reset();
     }
