--- a/views/home.html
+++ b/views/home.html
@@ -224,24 +224,16 @@
     //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
       //definisco i vali paramentri da passare all'api
-      const id = document.getElementById("id").value;
-      const action = sessionStorage.action;
-      //aggiunta nuovo esame
-      if((sessionStorage.filtroEsame = true) && (sessionStorage.filtroEmail = false)){
-        let newExam  = document.getElementById("changeValue").value;
-        let newEmail = '';
-      }
-      //modifica dell'email di un tutor
-      if((sessionStorage.filtroEmail = true) && (sessionStorage.filtroEsame = false)){
-        let newEmail = document.getElementById("changeValue").value;
-        let newExam  = '';
+      const id         = document.getElementById("id").value;
+      const action     = sessionStorage.action;
+      let changeValue  = document.getElementById("changeValue").value;
       }
       //opzioni per la fetch
       const options = {
         method: 'PUT'
       };
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/updateTutor/'+ id +'/'+ action +'/'+ newEmail +'/'+ newExam, options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/updateTutor/'+ id +'/'+ action +'/'+ changeValue, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
