--- a/views/home.html
+++ b/views/home.html
@@ -229,11 +229,11 @@
       //definisco i vali paramentri da passare all'api
       const id         = document.getElementById("id").value;
       const action     = sessionStorage.action;
-      let changeValue  = document.getElementById("changeValue").value;
+      let changeValue  = document.getElementById("valore").value;
       
       console.log(id);
       console.log(action);
-      console.log(changeValue);
+      console.log(valore);
       //opzioni per la fetch
       const options = {
         method: 'PUT'
