--- a/views/home.html
+++ b/views/home.html
@@ -233,7 +233,7 @@
       
       console.log(id);
       console.log(action);
-      console.log(valore);
+      console.log(changeValue);
       //opzioni per la fetch
       const options = {
         method: 'PUT'
